--- a/Exercise-3-Problem-4.ipynb
+++ b/Exercise-3-Problem-4.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -36,17 +36,82 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>addr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>kooirassaarentie</td>\n",
+       "      <td>Koirasaarentie 35, 00590 Helsinki</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>gustaf</td>\n",
+       "      <td>Gustaf Hällströmin katu 2, 00560 Helsinki</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id              name                                        addr\n",
+       "0   0  kooirassaarentie           Koirasaarentie 35, 00590 Helsinki\n",
+       "1   1            gustaf   Gustaf Hällströmin katu 2, 00560 Helsinki"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# read in input files\n",
+    "import os\n",
+    "from shapely.geometry import Polygon, Point, LineString\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "from geopandas.tools import geocode\n",
+    "from pyproj import CRS\n",
+    "import requests\n",
+    "import geojson\n",
     "\n",
-    "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "# read in input files\n",
+    "txt_file = \"activity_locations.txt\"\n",
+    "\n",
+    "txt_df = pd.read_csv(txt_file, sep=\";\")\n",
+    "\n",
+    "txt_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -60,17 +125,90 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>address</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>addr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>POINT (25501265.300 6672841.614)</td>\n",
+       "      <td>Koirasaarentie, Hopealaakso, Kruunuvuorenranta...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>kooirassaarentie</td>\n",
+       "      <td>Koirasaarentie 35, 00590 Helsinki</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POINT (25497942.152 6676901.898)</td>\n",
+       "      <td>Unicafe Physicum, 2, Gustaf Hällströmin katu, ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>gustaf</td>\n",
+       "      <td>Gustaf Hällströmin katu 2, 00560 Helsinki</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           geometry  \\\n",
+       "0  POINT (25501265.300 6672841.614)   \n",
+       "1  POINT (25497942.152 6676901.898)   \n",
+       "\n",
+       "                                             address  id              name  \\\n",
+       "0  Koirasaarentie, Hopealaakso, Kruunuvuorenranta...   0  kooirassaarentie   \n",
+       "1  Unicafe Physicum, 2, Gustaf Hällströmin katu, ...   1            gustaf   \n",
+       "\n",
+       "                                         addr  \n",
+       "0           Koirasaarentie 35, 00590 Helsinki  \n",
+       "1   Gustaf Hällströmin katu 2, 00560 Helsinki  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Geocode activity locations\n",
+    "geocoded = geocode(txt_df['addr'], provider='nominatim', user_agent='autogis_jg', timeout=4)\n",
     "\n",
-    "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "# Reproject to EPSG 3879\n",
+    "geocoded = geocoded.to_crs(epsg=3879)\n",
+    "\n",
+    "geocoded = geocoded.join(txt_df)\n",
+    "\n",
+    "geocoded.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -84,17 +222,111 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>shop_name</th>\n",
+       "      <th>addr</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Itis</td>\n",
+       "      <td>Itäkatu 1-7, 00930 Helsinki, Finland</td>\n",
+       "      <td>POINT (25.083 60.212)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Forum</td>\n",
+       "      <td>Mannerheimintie 14-20, 00100 Helsinki, Finland</td>\n",
+       "      <td>POINT (24.938 60.169)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Iso-Omena</td>\n",
+       "      <td>Piispansilta 11, 02230 Espoo, Finland</td>\n",
+       "      <td>POINT (24.740 60.160)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Sello</td>\n",
+       "      <td>Leppävaarankatu 3-9, 02600 Espoo, Finland</td>\n",
+       "      <td>POINT (24.814 60.219)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Jumbo</td>\n",
+       "      <td>Vantaanportinkatu 3, 01510 Vantaa</td>\n",
+       "      <td>POINT (24.963 60.292)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  shop_name                                            addr  \\\n",
+       "0   0       Itis            Itäkatu 1-7, 00930 Helsinki, Finland   \n",
+       "1   1      Forum  Mannerheimintie 14-20, 00100 Helsinki, Finland   \n",
+       "2   2  Iso-Omena           Piispansilta 11, 02230 Espoo, Finland   \n",
+       "3   3      Sello       Leppävaarankatu 3-9, 02600 Espoo, Finland   \n",
+       "4   4      Jumbo               Vantaanportinkatu 3, 01510 Vantaa   \n",
+       "\n",
+       "                geometry  \n",
+       "0  POINT (25.083 60.212)  \n",
+       "1  POINT (24.938 60.169)  \n",
+       "2  POINT (24.740 60.160)  \n",
+       "3  POINT (24.814 60.219)  \n",
+       "4  POINT (24.963 60.292)  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check coordinate reference system information (re-project/define if needed)\n",
+    "shopping_centers_gdf = gpd.read_file(\"shopping_centers.shp\")\n",
     "\n",
-    "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "# Drop columns\n",
+    "shopping_centers_gdf = shopping_centers_gdf.drop(['address'], axis=1)\n",
+    "\n",
+    "# Rename column\n",
+    "shopping_centers_gdf = shopping_centers_gdf.rename(columns={'name':'shop_name'})\n",
+    "\n",
+    "shopping_centers_gdf.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -108,13 +340,102 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>address</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>addr</th>\n",
+       "      <th>nearest_shop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>POINT (25501265.300 6672841.614)</td>\n",
+       "      <td>Koirasaarentie, Hopealaakso, Kruunuvuorenranta...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>kooirassaarentie</td>\n",
+       "      <td>Koirasaarentie 35, 00590 Helsinki</td>\n",
+       "      <td>Itis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POINT (25497942.152 6676901.898)</td>\n",
+       "      <td>Unicafe Physicum, 2, Gustaf Hällströmin katu, ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>gustaf</td>\n",
+       "      <td>Gustaf Hällströmin katu 2, 00560 Helsinki</td>\n",
+       "      <td>Itis</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           geometry  \\\n",
+       "0  POINT (25501265.300 6672841.614)   \n",
+       "1  POINT (25497942.152 6676901.898)   \n",
+       "\n",
+       "                                             address  id              name  \\\n",
+       "0  Koirasaarentie, Hopealaakso, Kruunuvuorenranta...   0  kooirassaarentie   \n",
+       "1  Unicafe Physicum, 2, Gustaf Hällströmin katu, ...   1            gustaf   \n",
+       "\n",
+       "                                         addr nearest_shop  \n",
+       "0           Koirasaarentie 35, 00590 Helsinki         Itis  \n",
+       "1   Gustaf Hällströmin katu 2, 00560 Helsinki         Itis  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find the closest shopping center for each activity location (closest shopping center from\n",
     "# and closest shopping center from work) and print out the results:\n",
+    "from shapely.ops import nearest_points\n",
     "\n",
-    "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
+    "def get_nearest_values(row, other_gdf=shopping_centers_gdf, point_column='geometry', value_column=\"geometry\"):\n",
+    "    \"\"\"Find the nearest point and return the corresponding value from specified value column.\"\"\"\n",
+    "    \n",
+    "    # Create an union of the other GeoDataFrame's geometries:\n",
+    "    other_points = other_gdf[\"geometry\"].unary_union\n",
+    "    \n",
+    "    # Find the nearest points\n",
+    "    nearest_geoms = nearest_points(row[point_column], other_points)\n",
+    "    \n",
+    "    # Get corresponding values from the other df\n",
+    "    nearest_data = other_gdf.loc[other_gdf[\"geometry\"] == nearest_geoms[1]]\n",
+    "    \n",
+    "    nearest_value = nearest_data[value_column].values[0]\n",
+    "    \n",
+    "    return nearest_value\n",
+    "\n",
+    "geocoded[\"nearest_shop\"] = geocoded.apply(get_nearest_values, other_gdf=shopping_centers_gdf, point_column=\"geometry\",value_column='shop_name', axis=1)\n",
+    "\n",
+    "geocoded.head()"
    ]
   },
   {
@@ -126,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -140,11 +461,23 @@
      "solution": true
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<shapely.geometry.point.Point object at 0x7f8931a40040>, <shapely.geometry.point.Point object at 0x7f8931a405e0>)\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# REPLACE THE ERROR BELOW WITH YOUR OWN CODE\n",
-    "raise NotImplementedError()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -164,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
